# mabi-pack2

./: .gitignore  Cargo.toml  README.md  build-all.bat  build.bat  build.rs  salts.txt
gui/: index.html  package-lock.json  package.json  rename-bundles.mjs  test_locales.mjs  test_locales_run.mjs  vite.config.ts
gui/src/: app.ts  app.ts.final_bak  locales.ts  pmgLoader.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
src/: common.rs  common_ext.rs  encryption.rs  extract.rs  lib.rs  list.rs  main.rs  pack.rs  pack_v1.rs  patch.rs  pmg.rs  snow2_fast.c  snow2_tables.rs
tests/: common.rs  integration_tests.rs
