[package]
name = "mabi-pack2"
version = "1.3.5"
edition = "2021"
authors = ["regomne <fallingsunz@gmail.com>", "ShaggyZE <shaggyze@gmail.com>"]
description = "Utilities for .it archives with robust error handling and logging."
license = "MIT"

[dependencies]
aes = "0.8.4"
block-modes = "0.9.1"
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] } # Pkcs7, UnpadError, KeyIvInit live here
md5 = "0.7.0"
crc32fast = "1.4.0"
rand = "0.8.5"
walkdir = "2.3.3" # Original was 2.3.2, 2.3.3 is a patch
regex = "1.5.6"   # Original was 1.5.4
byteorder = "1.4.3"
byte-slice-cast = "1.2.3" # As per your working version
miniz_oxide = "0.7.1" # Original was 0.5.3, latest 0.7.x is fine
anyhow = "1.0.86" # For error handling
reqwest = { version = "0.11", features = ["blocking", "rustls-tls-native-roots"] } # Or "native-tls"
clap = "~3.2.25" # For clap v3 builder syntax used in your main.rs

# Added for logging
log = "0.4"
simplelog = "0.12"
env_logger = "0.9.3" # Or latest if your Rust is up-to-date

[build-dependencies]
cc = "1.0"